Resolved bug BUG-000084217 Implemented the Search dijit Added new string in NLS file - urlMoreInfo Minor UI changes to handle new search dijit New option to remove basemap button from UI - basemapWidgetVisible

--- a/ServiceLookup/css/main.css
+++ b/ServiceLookup/css/main.css
@@ -5,7 +5,10 @@ html, body {
     width: 100%;
     font-family: Arial,Helvetica,sans-serif;
 }
-
+.esriSimpleSliderTL {
+top: 60px;
+left: 15px;
+}
 #mapDiv {
     padding: 0;
     margin: 0;
