--- a/ServiceLookup/css/navigationButtons.css
+++ b/ServiceLookup/css/navigationButtons.css
@@ -1,7 +1,7 @@
 ﻿.map-buttons {
     position: absolute;
-    top: 95px;
-    left: 20px;
+    top: 130px;
+    left: 15px;
     z-index: 35;
 }
 
